:bug: fix: 레이아웃/기능 버그 픽스 배포
* Vercel 배포 지원 추가
* 로고 클릭 시 메인 페이지로 나올 수 있도록 기능 추가
* 결과창에서 값 수정 시, history back 시 결과 반영이 되지 않는 문제 수정
* styled-components FOUC 문제 수정
* Devided by 0 문제(아메바/진드기) 수정
* iOS 높이/Zoom 이슈로 인한 레이아웃 문제 수정

--- a/src/globals.css
+++ b/src/globals.css
@@ -4,11 +4,70 @@
   font-family: "Wanted Sans Variable", "Wanted Sans", sans-serif;
 }
 
-body {
+#app {
+  height: calc(100 * var(--vh, 1vh));
   overflow-y: hidden;
 }
 
 a {
   text-decoration: none;
   color: inherit;
+}
+
+/* Loader */
+
+.loader {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+
+  z-index: 3;
+  background: #ffffff;
+
+  opacity: 1;
+}
+
+.loader[data-isLoading="HIDE"] {
+  animation: loader__fadeOut 0.158s linear forwards;
+}
+
+.loader[data-isLoading="FALSE"] {
+  z-index: -999;
+  display: none;
+}
+
+.loader .loader__spinner {
+  width: 48px;
+  height: 48px;
+
+  border: 5px solid #ee6f3c;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+
+  display: inline-block;
+  box-sizing: border-box;
+  animation: loader__rotation 1.58s linear infinite;
+}
+
+@keyframes loader__rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes loader__fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
